--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-"name": "omnom-chat",
-"version": "0.0.1",
-"description": "chat app",
-"dependencies": {}
+  "name": "omnom-chat",
+  "version": "0.0.1",
+  "description": "chat app",
+  "dependencies": {
+    "express": "^4.13.3",
+    "socket.io": "^1.3.7"
+  }
 }
